samples/_failures_safe/1761290935_49d3fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5082a32.c: In function ‘main’:
./samples/SAFE/__tmp_e5082a32.c:154:17: error: expected expression at end of input
  154 |                 } else
      |                 ^
./samples/SAFE/__tmp_e5082a32.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5082a32.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5082a32.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5082a32.c:154:17: error: expected declaration or statement at end of input
